--- a/TensorFlow_Abstracts_MultiSubjects.ipynb
+++ b/TensorFlow_Abstracts_MultiSubjects.ipynb
@@ -186,7 +186,7 @@
    "metadata": {},
    "source": [
     "### Creating vocaublary and transforming words into integers\n",
-    "This step is necessary for TensorFlow to work with words of the abstracts in a numerical manner. All words are given a specific *token* that is used to give them a numeric presence. The value of the token does not necesarilly correlate with the length, frequency, or position of the respective word. However, it is common to sort the words by frequency to have a way to apply cutoffs in the vocabulary if needed to imporve training accuracies."
+    "This step is necessary for TensorFlow to work with words of the abstracts in a numerical manner. All words are given a specific *token* that is used to give them a numeric presence. The value of the token does not necesarilly correlate with the length, frequency, or position of the respective word. However, it is common to sort the words by frequency to have a way to apply cutoffs in the vocabulary if needed to imporve training accuracies. An inversion dictionary was added to convert integers back to words."
    ]
   },
   {
@@ -200,32 +200,32 @@
        "[8,\n",
        " 56,\n",
        " 3,\n",
-       " 7470,\n",
+       " 7555,\n",
        " 22,\n",
        " 2,\n",
        " 667,\n",
        " 294,\n",
        " 19,\n",
-       " 2939,\n",
-       " 1212,\n",
+       " 2930,\n",
+       " 1213,\n",
        " 1,\n",
        " 157,\n",
        " 2862,\n",
-       " 1621,\n",
+       " 1622,\n",
        " 73,\n",
        " 2,\n",
        " 106,\n",
-       " 2263,\n",
-       " 10060,\n",
-       " 3569,\n",
-       " 850,\n",
-       " 20065,\n",
+       " 2265,\n",
+       " 9746,\n",
+       " 3590,\n",
+       " 852,\n",
+       " 20853,\n",
        " 4,\n",
-       " 1621,\n",
-       " 112,\n",
+       " 1622,\n",
+       " 113,\n",
        " 2,\n",
-       " 10049,\n",
-       " 8428,\n",
+       " 10130,\n",
+       " 8079,\n",
        " 8,\n",
        " 140,\n",
        " 59,\n",
@@ -233,117 +233,117 @@
        " 10,\n",
        " 71,\n",
        " 1,\n",
-       " 35905,\n",
-       " 4442,\n",
+       " 39649,\n",
+       " 4483,\n",
        " 4,\n",
-       " 56266,\n",
-       " 7519,\n",
-       " 2145,\n",
+       " 58985,\n",
+       " 7412,\n",
+       " 2141,\n",
        " 199,\n",
-       " 112,\n",
+       " 113,\n",
        " 6,\n",
        " 902,\n",
        " 1,\n",
-       " 4427,\n",
+       " 4476,\n",
        " 2,\n",
-       " 1107,\n",
+       " 1109,\n",
        " 557,\n",
-       " 5097,\n",
+       " 5191,\n",
        " 1,\n",
-       " 10049,\n",
-       " 1621,\n",
-       " 112,\n",
+       " 10130,\n",
+       " 1622,\n",
+       " 113,\n",
        " 24,\n",
-       " 1219,\n",
-       " 921,\n",
+       " 1220,\n",
+       " 920,\n",
        " 14,\n",
        " 88,\n",
-       " 3012,\n",
+       " 3019,\n",
        " 11,\n",
        " 79,\n",
-       " 959,\n",
+       " 961,\n",
        " 2,\n",
        " 1,\n",
-       " 20065,\n",
-       " 7089,\n",
-       " 10049,\n",
-       " 912,\n",
+       " 20853,\n",
+       " 7206,\n",
+       " 10130,\n",
+       " 908,\n",
        " 11,\n",
-       " 2824,\n",
-       " 629,\n",
-       " 1642,\n",
-       " 1555,\n",
+       " 2817,\n",
+       " 630,\n",
+       " 1640,\n",
+       " 1551,\n",
        " 67,\n",
        " 1,\n",
-       " 2068,\n",
-       " 629,\n",
-       " 1642,\n",
+       " 2055,\n",
+       " 630,\n",
+       " 1640,\n",
        " 2,\n",
        " 1,\n",
-       " 2345,\n",
-       " 1389,\n",
+       " 2344,\n",
+       " 1396,\n",
        " 2221,\n",
        " 134,\n",
        " 1,\n",
        " 157,\n",
-       " 1621,\n",
+       " 1622,\n",
        " 73,\n",
        " 24,\n",
-       " 1219,\n",
-       " 1056,\n",
+       " 1220,\n",
+       " 1057,\n",
        " 21,\n",
        " 18,\n",
-       " 3012,\n",
+       " 3019,\n",
        " 79,\n",
        " 64,\n",
        " 8,\n",
-       " 1609,\n",
+       " 1615,\n",
        " 10,\n",
-       " 1516,\n",
+       " 1517,\n",
        " 55,\n",
-       " 20065,\n",
+       " 20853,\n",
        " 14,\n",
-       " 10049,\n",
-       " 8428,\n",
-       " 238,\n",
+       " 10130,\n",
+       " 8079,\n",
+       " 240,\n",
        " 23,\n",
-       " 1226,\n",
+       " 1227,\n",
        " 10,\n",
-       " 921,\n",
-       " 1219,\n",
-       " 1056,\n",
-       " 5467,\n",
+       " 920,\n",
+       " 1220,\n",
+       " 1057,\n",
+       " 5421,\n",
        " 1,\n",
-       " 4573,\n",
+       " 4526,\n",
        " 64,\n",
        " 3,\n",
-       " 1537,\n",
-       " 523,\n",
-       " 1276,\n",
+       " 1535,\n",
+       " 522,\n",
+       " 1273,\n",
        " 5,\n",
        " 1,\n",
-       " 333,\n",
+       " 332,\n",
        " 85,\n",
        " 2,\n",
        " 1,\n",
        " 106,\n",
-       " 2263,\n",
-       " 850,\n",
+       " 2265,\n",
+       " 852,\n",
        " 16,\n",
-       " 10049,\n",
-       " 5058,\n",
-       " 690,\n",
+       " 10130,\n",
+       " 5004,\n",
+       " 692,\n",
        " 13,\n",
-       " 1392,\n",
+       " 1393,\n",
        " 4,\n",
        " 492,\n",
-       " 5518,\n",
+       " 5591,\n",
        " 2,\n",
        " 1,\n",
-       " 6574,\n",
-       " 937,\n",
-       " 976,\n",
-       " 5503,\n",
+       " 6492,\n",
+       " 934,\n",
+       " 973,\n",
+       " 5569,\n",
        " 12,\n",
        " 334,\n",
        " 339,\n",
@@ -352,18 +352,18 @@
        " 17,\n",
        " 397,\n",
        " 1,\n",
-       " 5503,\n",
+       " 5569,\n",
        " 24,\n",
-       " 1219,\n",
-       " 1056,\n",
+       " 1220,\n",
+       " 1057,\n",
        " 334,\n",
        " 18,\n",
-       " 546,\n",
-       " 5342,\n",
+       " 544,\n",
+       " 5226,\n",
        " 65,\n",
-       " 9369,\n",
+       " 9303,\n",
        " 4,\n",
-       " 873,\n",
+       " 871,\n",
        " 65,\n",
        " 141,\n",
        " 568,\n",
@@ -373,23 +373,23 @@
        " 27,\n",
        " 148,\n",
        " 1433,\n",
-       " 3139,\n",
-       " 5058,\n",
+       " 3126,\n",
+       " 5004,\n",
        " 2,\n",
        " 1,\n",
-       " 10049,\n",
-       " 1889,\n",
+       " 10130,\n",
+       " 1891,\n",
        " 24,\n",
-       " 1219,\n",
-       " 1056,\n",
+       " 1220,\n",
+       " 1057,\n",
        " 1,\n",
        " 157,\n",
-       " 10049,\n",
-       " 1621,\n",
+       " 10130,\n",
+       " 1622,\n",
        " 73,\n",
        " 14,\n",
        " 88,\n",
-       " 3012,\n",
+       " 3019,\n",
        " 11]"
       ]
      },
@@ -408,6 +408,7 @@
     "counts = Counter(words) ## Count the occurence of each word\n",
     "vocab = sorted(counts, key=counts.get, reverse=True) ## Sorted words by occurence\n",
     "vocab_to_int = {word: ii for ii, word in enumerate(vocab, 1)} ## Conversion dictionary\n",
+    "int_to_vocab = {ii: word for ii, word in enumerate(vocab, 1)} ## Inversion dictionary\n",
     "\n",
     "abstracts_ints = [] ## Empty titles list for integer encoding\n",
     "for abstract in abstracts_clean:\n",
@@ -480,28 +481,28 @@
      "data": {
       "text/plain": [
        "array([    0,     0,     0,     0,     0,     0,     8,    56,     3,\n",
-       "        7470,    22,     2,   667,   294,    19,  2939,  1212,     1,\n",
-       "         157,  2862,  1621,    73,     2,   106,  2263, 10060,  3569,\n",
-       "         850, 20065,     4,  1621,   112,     2, 10049,  8428,     8,\n",
-       "         140,    59,    51,    10,    71,     1, 35905,  4442,     4,\n",
-       "       56266,  7519,  2145,   199,   112,     6,   902,     1,  4427,\n",
-       "           2,  1107,   557,  5097,     1, 10049,  1621,   112,    24,\n",
-       "        1219,   921,    14,    88,  3012,    11,    79,   959,     2,\n",
-       "           1, 20065,  7089, 10049,   912,    11,  2824,   629,  1642,\n",
-       "        1555,    67,     1,  2068,   629,  1642,     2,     1,  2345,\n",
-       "        1389,  2221,   134,     1,   157,  1621,    73,    24,  1219,\n",
-       "        1056,    21,    18,  3012,    79,    64,     8,  1609,    10,\n",
-       "        1516,    55, 20065,    14, 10049,  8428,   238,    23,  1226,\n",
-       "          10,   921,  1219,  1056,  5467,     1,  4573,    64,     3,\n",
-       "        1537,   523,  1276,     5,     1,   333,    85,     2,     1,\n",
-       "         106,  2263,   850,    16, 10049,  5058,   690,    13,  1392,\n",
-       "           4,   492,  5518,     2,     1,  6574,   937,   976,  5503,\n",
-       "          12,   334,   339,    10,    13,    17,   397,     1,  5503,\n",
-       "          24,  1219,  1056,   334,    18,   546,  5342,    65,  9369,\n",
-       "           4,   873,    65,   141,   568,    69,    55,     2,    27,\n",
-       "         148,  1433,  3139,  5058,     2,     1, 10049,  1889,    24,\n",
-       "        1219,  1056,     1,   157, 10049,  1621,    73,    14,    88,\n",
-       "        3012,    11])"
+       "        7555,    22,     2,   667,   294,    19,  2930,  1213,     1,\n",
+       "         157,  2862,  1622,    73,     2,   106,  2265,  9746,  3590,\n",
+       "         852, 20853,     4,  1622,   113,     2, 10130,  8079,     8,\n",
+       "         140,    59,    51,    10,    71,     1, 39649,  4483,     4,\n",
+       "       58985,  7412,  2141,   199,   113,     6,   902,     1,  4476,\n",
+       "           2,  1109,   557,  5191,     1, 10130,  1622,   113,    24,\n",
+       "        1220,   920,    14,    88,  3019,    11,    79,   961,     2,\n",
+       "           1, 20853,  7206, 10130,   908,    11,  2817,   630,  1640,\n",
+       "        1551,    67,     1,  2055,   630,  1640,     2,     1,  2344,\n",
+       "        1396,  2221,   134,     1,   157,  1622,    73,    24,  1220,\n",
+       "        1057,    21,    18,  3019,    79,    64,     8,  1615,    10,\n",
+       "        1517,    55, 20853,    14, 10130,  8079,   240,    23,  1227,\n",
+       "          10,   920,  1220,  1057,  5421,     1,  4526,    64,     3,\n",
+       "        1535,   522,  1273,     5,     1,   332,    85,     2,     1,\n",
+       "         106,  2265,   852,    16, 10130,  5004,   692,    13,  1393,\n",
+       "           4,   492,  5591,     2,     1,  6492,   934,   973,  5569,\n",
+       "          12,   334,   339,    10,    13,    17,   397,     1,  5569,\n",
+       "          24,  1220,  1057,   334,    18,   544,  5226,    65,  9303,\n",
+       "           4,   871,    65,   141,   568,    69,    55,     2,    27,\n",
+       "         148,  1433,  3126,  5004,     2,     1, 10130,  1891,    24,\n",
+       "        1220,  1057,     1,   157, 10130,  1622,    73,    14,    88,\n",
+       "        3019,    11])"
       ]
      },
      "execution_count": 7,
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -637,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -666,14 +667,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Size of the embedding vectors (number of units in the embedding layer)\n",
-    "embed_size = 300 \n",
+    "embed_size = 75 \n",
     "\n",
     "with graph.as_default():\n",
     "    embedding = tf.Variable(tf.random_uniform((n_words, embed_size), -1, 1)) ## Lookup matrix\n",
@@ -690,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -712,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -734,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -765,7 +766,9 @@
    "source": [
     "# Calculate accuracy for validation \n",
     "with graph.as_default():\n",
-    "    correct_pred = tf.equal(tf.cast(tf.round(predictions), tf.int32), labels_)\n",
+    "    #correct_pred = tf.equal(tf.cast(tf.round(predictions), tf.int32), labels_)\n",
+    "    # Need to account for multiple classifiers\n",
+    "    correct_pred = tf.equal((tf.arg_max(tf.round(predictions), 1)), (tf.arg_max(labels_, 1)))    \n",
     "    accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))"
    ]
   },
@@ -779,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -796,116 +799,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0/40 Iteration: 100 Train loss: 0.060\n",
-      "Val acc: 0.925\n",
-      "Epoch: 1/40 Iteration: 200 Train loss: 0.050\n",
-      "Val acc: 0.939\n",
-      "Epoch: 2/40 Iteration: 300 Train loss: 0.039\n",
-      "Val acc: 0.938\n",
-      "Epoch: 3/40 Iteration: 400 Train loss: 0.040\n",
-      "Val acc: 0.938\n",
-      "Epoch: 4/40 Iteration: 500 Train loss: 0.033\n",
-      "Val acc: 0.939\n",
-      "Epoch: 4/40 Iteration: 600 Train loss: 0.027\n",
-      "Val acc: 0.940\n",
-      "Epoch: 5/40 Iteration: 700 Train loss: 0.022\n",
-      "Val acc: 0.938\n",
-      "Epoch: 6/40 Iteration: 800 Train loss: 0.027\n",
-      "Val acc: 0.938\n",
-      "Epoch: 7/40 Iteration: 900 Train loss: 0.022\n",
-      "Val acc: 0.937\n",
-      "Epoch: 8/40 Iteration: 1000 Train loss: 0.024\n",
-      "Val acc: 0.938\n",
-      "Epoch: 9/40 Iteration: 1100 Train loss: 0.022\n",
-      "Val acc: 0.939\n",
-      "Epoch: 9/40 Iteration: 1200 Train loss: 0.023\n",
-      "Val acc: 0.931\n",
-      "Epoch: 10/40 Iteration: 1300 Train loss: 0.018\n",
-      "Val acc: 0.936\n",
-      "Epoch: 11/40 Iteration: 1400 Train loss: 0.022\n",
-      "Val acc: 0.935\n",
-      "Epoch: 12/40 Iteration: 1500 Train loss: 0.019\n",
-      "Val acc: 0.936\n",
-      "Epoch: 13/40 Iteration: 1600 Train loss: 0.019\n",
-      "Val acc: 0.936\n",
-      "Epoch: 14/40 Iteration: 1700 Train loss: 0.018\n",
-      "Val acc: 0.936\n",
-      "Epoch: 14/40 Iteration: 1800 Train loss: 0.015\n",
-      "Val acc: 0.935\n",
-      "Epoch: 15/40 Iteration: 1900 Train loss: 0.015\n",
-      "Val acc: 0.935\n",
-      "Epoch: 16/40 Iteration: 2000 Train loss: 0.017\n",
-      "Val acc: 0.934\n",
-      "Epoch: 17/40 Iteration: 2100 Train loss: 0.015\n",
-      "Val acc: 0.934\n",
-      "Epoch: 18/40 Iteration: 2200 Train loss: 0.015\n",
-      "Val acc: 0.934\n",
-      "Epoch: 19/40 Iteration: 2300 Train loss: 0.014\n",
-      "Val acc: 0.933\n",
-      "Epoch: 19/40 Iteration: 2400 Train loss: 0.016\n",
-      "Val acc: 0.933\n",
-      "Epoch: 20/40 Iteration: 2500 Train loss: 0.016\n",
-      "Val acc: 0.938\n",
-      "Epoch: 21/40 Iteration: 2600 Train loss: 0.016\n",
-      "Val acc: 0.934\n",
-      "Epoch: 22/40 Iteration: 2700 Train loss: 0.015\n",
-      "Val acc: 0.937\n",
-      "Epoch: 23/40 Iteration: 2800 Train loss: 0.014\n",
-      "Val acc: 0.934\n",
-      "Epoch: 24/40 Iteration: 2900 Train loss: 0.021\n",
-      "Val acc: 0.932\n",
-      "Epoch: 24/40 Iteration: 3000 Train loss: 0.016\n",
-      "Val acc: 0.933\n",
-      "Epoch: 25/40 Iteration: 3100 Train loss: 0.013\n",
-      "Val acc: 0.935\n",
-      "Epoch: 26/40 Iteration: 3200 Train loss: 0.016\n",
-      "Val acc: 0.934\n",
-      "Epoch: 27/40 Iteration: 3300 Train loss: 0.017\n",
-      "Val acc: 0.937\n",
-      "Epoch: 28/40 Iteration: 3400 Train loss: 0.016\n",
-      "Val acc: 0.933\n",
-      "Epoch: 29/40 Iteration: 3500 Train loss: 0.017\n",
-      "Val acc: 0.934\n",
-      "Epoch: 29/40 Iteration: 3600 Train loss: 0.019\n",
-      "Val acc: 0.932\n",
-      "Epoch: 30/40 Iteration: 3700 Train loss: 0.011\n",
-      "Val acc: 0.934\n",
-      "Epoch: 31/40 Iteration: 3800 Train loss: 0.016\n",
-      "Val acc: 0.934\n",
-      "Epoch: 32/40 Iteration: 3900 Train loss: 0.017\n",
-      "Val acc: 0.933\n",
-      "Epoch: 33/40 Iteration: 4000 Train loss: 0.014\n",
-      "Val acc: 0.935\n",
-      "Epoch: 34/40 Iteration: 4100 Train loss: 0.019\n",
-      "Val acc: 0.932\n",
-      "Epoch: 34/40 Iteration: 4200 Train loss: 0.017\n",
-      "Val acc: 0.934\n",
-      "Epoch: 35/40 Iteration: 4300 Train loss: 0.013\n",
-      "Val acc: 0.935\n",
-      "Epoch: 36/40 Iteration: 4400 Train loss: 0.015\n",
-      "Val acc: 0.936\n",
-      "Epoch: 37/40 Iteration: 4500 Train loss: 0.015\n",
-      "Val acc: 0.934\n",
-      "Epoch: 38/40 Iteration: 4600 Train loss: 0.016\n",
-      "Val acc: 0.934\n",
-      "Epoch: 39/40 Iteration: 4700 Train loss: 0.019\n",
-      "Val acc: 0.933\n",
-      "Epoch: 39/40 Iteration: 4800 Train loss: 0.015\n",
-      "Val acc: 0.934\n"
+      "Epoch: 0/20 Iteration: 100 Train loss: 0.062\n",
+      "Val acc: 0.239\n",
+      "Epoch: 1/20 Iteration: 200 Train loss: 0.055\n",
+      "Val acc: 0.351\n",
+      "Epoch: 2/20 Iteration: 300 Train loss: 0.045\n",
+      "Val acc: 0.370\n",
+      "Epoch: 3/20 Iteration: 400 Train loss: 0.041\n",
+      "Val acc: 0.399\n",
+      "Epoch: 4/20 Iteration: 500 Train loss: 0.041\n",
+      "Val acc: 0.404\n",
+      "Epoch: 4/20 Iteration: 600 Train loss: 0.036\n",
+      "Val acc: 0.431\n",
+      "Epoch: 5/20 Iteration: 700 Train loss: 0.021\n",
+      "Val acc: 0.465\n",
+      "Epoch: 6/20 Iteration: 800 Train loss: 0.023\n",
+      "Val acc: 0.456\n",
+      "Epoch: 7/20 Iteration: 900 Train loss: 0.025\n",
+      "Val acc: 0.453\n",
+      "Epoch: 8/20 Iteration: 1000 Train loss: 0.020\n",
+      "Val acc: 0.472\n",
+      "Epoch: 9/20 Iteration: 1100 Train loss: 0.023\n",
+      "Val acc: 0.463\n",
+      "Epoch: 9/20 Iteration: 1200 Train loss: 0.021\n",
+      "Val acc: 0.467\n",
+      "Epoch: 10/20 Iteration: 1300 Train loss: 0.014\n",
+      "Val acc: 0.476\n",
+      "Epoch: 11/20 Iteration: 1400 Train loss: 0.016\n",
+      "Val acc: 0.470\n",
+      "Epoch: 12/20 Iteration: 1500 Train loss: 0.014\n",
+      "Val acc: 0.467\n",
+      "Epoch: 13/20 Iteration: 1600 Train loss: 0.010\n",
+      "Val acc: 0.477\n",
+      "Epoch: 14/20 Iteration: 1700 Train loss: 0.020\n",
+      "Val acc: 0.465\n",
+      "Epoch: 14/20 Iteration: 1800 Train loss: 0.012\n",
+      "Val acc: 0.488\n",
+      "Epoch: 15/20 Iteration: 1900 Train loss: 0.011\n",
+      "Val acc: 0.483\n",
+      "Epoch: 16/20 Iteration: 2000 Train loss: 0.013\n",
+      "Val acc: 0.474\n",
+      "Epoch: 17/20 Iteration: 2100 Train loss: 0.012\n",
+      "Val acc: 0.485\n",
+      "Epoch: 18/20 Iteration: 2200 Train loss: 0.007\n",
+      "Val acc: 0.489\n",
+      "Epoch: 19/20 Iteration: 2300 Train loss: 0.014\n",
+      "Val acc: 0.482\n",
+      "Epoch: 19/20 Iteration: 2400 Train loss: 0.010\n",
+      "Val acc: 0.493\n"
      ]
     }
    ],
    "source": [
     "# Typical trainig code for TensorFlow\n",
     "\n",
-    "epochs = 40 ## Number of full iterations\n",
+    "epochs = 20 ## Number of full iterations\n",
     "\n",
     "with graph.as_default():\n",
     "    saver = tf.train.Saver()\n",
@@ -954,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +917,7 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from checkpoints/subjects.ckpt\n",
-      "Test accuracy: 0.936\n"
+      "Test accuracy: 0.512\n"
      ]
     }
    ],
